WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147115
Fix the !ENABLE(DETAILS_ELEMENT) build after
r186598
https://bugs.webkit.org/show_bug.cgi?id=147115
Summary
Fix the !ENABLE(DETAILS_ELEMENT) build after r186598
Csaba Osztrogonác
Reported
2015-07-20 11:41:53 PDT
http://trac.webkit.org/changeset/186598
broke the !ENABLE(DETAILS_ELEMENT) build: lib/libwebcore_efl.a(lib/../Source/WebCore/CMakeFiles/WebCore.dir/accessibility/AccessibilityNodeObject.cpp.o):AccessibilityNodeObject.cpp:function WebCore::AccessibilityNodeObject::setIsExpanded(bool): error: undefined reference to 'WebCore::HTMLDetailsElement::toggleOpen()' collect2: error: ld returned 1 exit status The problem is that WebCore::HTMLDetailsElement::toggleOpen() is defined inside ENABLE(DETAILS_ELEMENT), but used unconditionally in AccessibilityNodeObject.cpp.
Attachments
Patch
(1.51 KB, patch)
2015-07-20 11:43 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-07-20 11:43:27 PDT
Created
attachment 257111
[details]
Patch
Csaba Osztrogonác
Comment 2
2015-07-21 11:05:41 PDT
ping?
WebKit Commit Bot
Comment 3
2015-07-21 12:23:17 PDT
Comment on
attachment 257111
[details]
Patch Clearing flags on attachment: 257111 Committed
r187112
: <
http://trac.webkit.org/changeset/187112
>
WebKit Commit Bot
Comment 4
2015-07-21 12:23:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug