Fix the !ENABLE(DETAILS_ELEMENT) build after r186598 https://bugs.webkit.org/show_bug.cgi?id=147115

Reviewed by Chris Fleizach.

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::setIsExpanded):


Canonical link: https://commits.webkit.org/165192@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187112 268f45cc-cd09-0410-ab3c-d52691b4dbfc